Formatter / Table layout / Fix overlap.

--- a/web-ui/src/main/resources/catalog/style/gn_metadata.less
+++ b/web-ui/src/main/resources/catalog/style/gn_metadata.less
@@ -71,7 +71,6 @@ header div.gn-abstract {
 
   dl.gn-table {
     dt, dd {
-      width: 100% !important;
       .table {
         font-size: 14px;
       }
